[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "al-otto"
dynamic = ["version"]
description = "The ottomatic video engine"
authors = [
    {name = "Quaternion Media", email = "qm@quaternion.media"}
]
dependencies = [
    "fastapi~=0.110",
    "moviepy~=1.0",
    "pydantic~=2.6",
]
requires-python = ">=3.8.1,<4.0"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/quaternionmedia/otto"
documentation = "https://quaternionmedia.github.io/otto/"
repository = "https://github.com/quaternionmedia/otto"

[project.optional-dependencies]
render = [
    "gizeh~=0.1",
    "bezier~=2023.7",
    "tqdm~=4.66",
]
test = [
    "pytest~=8.1",
    "httpx~=0.27",
    "pytest-cov~=5.0",
    "pytest-xdist~=3.5",
]
docs = [
    "mkdocs~=1.5",
    "mkdocs-material~=9.5",
    "mkdocs-git-revision-date-localized-plugin~=1.2",
    "mike~=2.0",
    "mkdocstrings[python]~=0.24",
    "setuptools~=69.2",
]

[tool.pdm.dev-dependencies]
dev = [
    "uvicorn~=0.29",
    "black~=24.3",
    "ruff~=0.3",
]
nox = [
    "nox~=2024.3",
]


[tool.pdm]
version = { source = "file", path = "otto/_version.py" }

[tool.pytest.ini_options]
testpaths = ["tests"]
