[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "al-otto"
dynamic = ["version"]
description = "The ottomatic video engine"
authors = [
    {name = "Quaternion Media", email = "qm@quaternion.media"}
]
dependencies = [
    "fastapi~=0.115",
    "moviepy~=1.0",
    "pydantic~=2.9",
]
requires-python = ">=3.8.1,<4.0"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/quaternionmedia/otto"
documentation = "https://quaternionmedia.github.io/otto/"
repository = "https://github.com/quaternionmedia/otto"

[project.optional-dependencies]
render = [
    "gizeh~=0.1",
    "bezier~=2023.7",
    "tqdm~=4.66",
]
test = [
    "pytest~=8.3",
    "httpx~=0.27",
    "pytest-cov~=5.0",
    "pytest-xdist~=3.6",
]
docs = [
    "mkdocs~=1.6",
    "mkdocs-material~=9.5",
    "mkdocs-git-revision-date-localized-plugin~=1.3",
    "mike~=2.1",
    "mkdocstrings[python]~=0.26",
    "setuptools~=75.2",
]

[tool.pdm.dev-dependencies]
dev = [
    "uvicorn~=0.32",
    "black~=24.8",
    "ruff~=0.7",
]
nox = [
    "nox~=2024.10",
]


[tool.pdm]
version = { source = "file", path = "otto/_version.py" }

[tool.pytest.ini_options]
testpaths = ["tests"]
